...
        onPress={() => {
          props.setModalVisible(false);
        }}
      >
        <StyledView className="bg-wedgewood-100 dark:bg-gray-950 dark:border-wedgewood-600 border-2 border-wedgewood-600 w-full p-5 rounded-xl">
          <StyledText className="font-poppinsBold text-xl text-center mb-4 text-wedgewood-950 dark:text-wedgewood-300">
            Add Routine
          </StyledText>

          <TextModal
            modalName="Routine Name"
            modalVisible={nameModalVisible}
            setModalVisible={setNameModalVisible}
...
