...
                <FontAwesomeIcon
                  icon={faPlus}
                  size={20}
                  color={colorScheme === "dark" ? "#92cace" : "#1a2c32"}
                ></FontAwesomeIcon>
                <StyledText className="text-xl text-wedgewood-950 dark:text-wedgewood-300 font-poppins ml-3 pb-[1.5]">
                  Create New Schedule
                </StyledText>
              </StyledView>
              <FontAwesomeIcon
                icon={faAngleRight}
                size={20}
                color={colorScheme == "dark" ? "#92cace" : "#1a2c32"}
...
