...
  return (
    <>
      <Wrapper>
        {storage.getString("currentSchedule") ? (
          <StyledPressable
            accessible={true}
            accessibilityLabel="Import Schedule"
            className="p-4 shadow-lg bg-wedgewood-300 rounded mt-4 flex flex-row justify-between items-center border-2 border-wedgewood-400 dark:bg-wedgewood-950 dark:border-wedgewood-600 active:bg-wedgewood-500 dark:active:bg-wedgewood-800"
            onPress={openBottomSheet}
          >
            <StyledView className="flex flex-row items-center">
              <FontAwesomeIcon
                icon={faFileImport}
...
        </StyledPressable>

        <StyledPressable
          className="p-4 shadow-lg bg-wedgewood-300 rounded mt-4 flex flex-row justify-between items-center border-2 border-wedgewood-400 dark:bg-wedgewood-950 dark:border-wedgewood-600 active:bg-wedgewood-500 dark:active:bg-wedgewood-800"
          onPress={() => router.push("/settings/routine")}
          accessible={true}
          accessibilityLabel="Routine Settings"
        >
          <StyledView className="flex flex-row items-center">
            <FontAwesomeIcon
              icon={faCalendarPlus}
              size={20}
              color={colorScheme === "dark" ? "#92cace" : "#65a30d"}
...
