...
          <NativeTabs.Trigger name="schedule">
            <Icon sf="calendar" drawable="ic_scheduli_notification" />
            <Label>Schedule</Label>
          </NativeTabs.Trigger>
          <NativeTabs.Trigger name="settings">
            <Icon sf="gear" drawable="ic_settings" />
            <Label>Settings</Label>
          </NativeTabs.Trigger>
        </NativeTabs>
      </GestureHandlerRootView>
    </>
  );
}
...
