...
            {scheduleDB["routines"][routine]["officialName"]}
          </StyledText>
        </StyledView>

        <StyledPressable
          accessible={true}
          accessibilityLabel="Edit Routine Properties"
          className=" mt-2 bg-wedgewood-400 rounded-md p-3 border-2 border-wedgewood-500 dark:bg-wedgewood-950 dark:border-wedgewood-600"
          onPress={() => {
            setEditModalVisible(true);
          }}
        >
          <FontAwesomeIcon
...
