appId: com.scheduli.schedulimobile
---
- startRecording: .maestro/recordings/specialActiveDay
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      text: "Scheduli"
    timeout: 60000
- tapOn: "Settings"
- tapOn: Import Schedule
- tapOn: Import Default Schedule
- tapOn: Edit Routine 1 Routine
- tapOn: Edit Routine Properties
- tapOn: Create Active Day
- tapOn: Finish
- assertVisible: "Edit Active Day - .*"
- tapOn: Finish
